modified promise cancellation

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "dotenv": "^16.4.5",
     "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.64.0",
