--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.64.0",
     "nodemon": "^3.1.0",
